--- a/TVar/Base.lproj/Main.storyboard
+++ b/TVar/Base.lproj/Main.storyboard
@@ -175,10 +175,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bl6-Sb-TGe" userLabel="VideoBox">
-                                <rect key="frame" x="0.0" y="79" width="600" height="215.5"/>
+                                <rect key="frame" x="0.0" y="79" width="600" height="221"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="loginBack" translatesAutoresizingMaskIntoConstraints="NO" id="7rr-NM-PE6" userLabel="SelectVideoView">
-                                        <rect key="frame" x="15" y="51" width="570" height="159.5"/>
+                                        <rect key="frame" x="15" y="51" width="570" height="165"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STEP1 - 撮影したテレビ動画" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bWg-Ra-liE">
                                         <rect key="frame" x="15" y="15" width="231" height="21"/>
@@ -206,35 +206,35 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k0d-Fq-9Qi" userLabel="ImageBox">
-                                <rect key="frame" x="0.0" y="374.5" width="600" height="215.5"/>
+                                <rect key="frame" x="0.0" y="369.5" width="600" height="220.5"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jGn-G7-yPi" userLabel="SelectImageView">
-                                        <rect key="frame" x="15" y="51" width="570" height="159.5"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jGn-G7-yPi" userLabel="SelectImageView">
+                                        <rect key="frame" x="15" y="41" width="570" height="174.5"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STEP2 - 合成する写真" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KKK-gH-e2D">
-                                        <rect key="frame" x="15" y="15" width="170" height="21"/>
+                                        <rect key="frame" x="15" y="5" width="170" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.62352941179999999" green="0.65490196079999996" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_done" translatesAutoresizingMaskIntoConstraints="NO" id="fVl-ah-yAb">
-                                        <rect key="frame" x="200" y="18" width="15" height="15"/>
+                                        <rect key="frame" x="200" y="8" width="15" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="15" id="VQK-kA-5rj"/>
                                             <constraint firstAttribute="height" constant="15" id="kB1-Zk-p78"/>
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HA2-Rx-G4X" userLabel="NotSelectBox">
-                                        <rect key="frame" x="15" y="51" width="570" height="159.5"/>
+                                        <rect key="frame" x="15" y="41" width="570" height="164.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="アルバムから選択" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZMM-pt-NJc">
-                                                <rect key="frame" x="412" y="88.5" width="136" height="21"/>
+                                                <rect key="frame" x="412" y="93.5" width="136" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.62352941179999999" green="0.65490196079999996" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U9w-Jn-o05">
-                                                <rect key="frame" x="70" y="18.5" width="60" height="60"/>
+                                                <rect key="frame" x="70" y="23.5" width="60" height="60"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="60" id="V0K-FB-yGM"/>
                                                     <constraint firstAttribute="width" constant="60" id="xrm-Hh-wYK"/>
@@ -245,7 +245,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vxg-MQ-3Fg">
-                                                <rect key="frame" x="450" y="18.5" width="60" height="60"/>
+                                                <rect key="frame" x="450" y="23.5" width="60" height="60"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="60" id="BJf-aZ-BDO"/>
                                                     <constraint firstAttribute="width" constant="60" id="D6f-6e-wR3"/>
@@ -256,7 +256,7 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="撮影する" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qw6-lX-XtG">
-                                                <rect key="frame" x="66" y="88.5" width="68" height="21"/>
+                                                <rect key="frame" x="66" y="93.5" width="68" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.396078431372549" green="0.46274509803921571" blue="0.51372549019607838" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -273,27 +273,40 @@
                                             <constraint firstItem="qw6-lX-XtG" firstAttribute="centerX" secondItem="U9w-Jn-o05" secondAttribute="centerX" id="pyl-GO-Rl4"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vZM-TA-Sl4">
+                                        <rect key="frame" x="560" y="5" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20" id="gcC-H6-Tb6"/>
+                                            <constraint firstAttribute="height" constant="20" id="n6w-wV-Cmv"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="ic_delete"/>
+                                        <connections>
+                                            <action selector="deleteButtonPushed:" destination="gSy-mc-Sna" eventType="touchUpInside" id="sFw-jH-Lzd"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="jGn-G7-yPi" firstAttribute="leading" secondItem="k0d-Fq-9Qi" secondAttribute="leading" constant="15" id="4xh-R4-gN5"/>
+                                    <constraint firstItem="vZM-TA-Sl4" firstAttribute="centerY" secondItem="fVl-ah-yAb" secondAttribute="centerY" id="92t-N6-d3P"/>
                                     <constraint firstItem="HA2-Rx-G4X" firstAttribute="top" secondItem="KKK-gH-e2D" secondAttribute="bottom" constant="15" id="Gqc-Tu-olY"/>
                                     <constraint firstItem="fVl-ah-yAb" firstAttribute="leading" secondItem="KKK-gH-e2D" secondAttribute="trailing" constant="15" id="Lli-2d-HZp"/>
                                     <constraint firstAttribute="bottom" secondItem="jGn-G7-yPi" secondAttribute="bottom" constant="5" id="PI5-T8-HyQ"/>
                                     <constraint firstAttribute="trailing" secondItem="jGn-G7-yPi" secondAttribute="trailing" constant="15" id="X9a-Kq-V9q"/>
-                                    <constraint firstItem="KKK-gH-e2D" firstAttribute="top" secondItem="k0d-Fq-9Qi" secondAttribute="top" constant="15" id="e7g-eL-ri2"/>
-                                    <constraint firstAttribute="bottom" secondItem="HA2-Rx-G4X" secondAttribute="bottom" constant="5" id="euR-KI-ygl"/>
+                                    <constraint firstItem="KKK-gH-e2D" firstAttribute="top" secondItem="k0d-Fq-9Qi" secondAttribute="top" constant="5" id="e7g-eL-ri2"/>
+                                    <constraint firstAttribute="bottom" secondItem="HA2-Rx-G4X" secondAttribute="bottom" constant="15" id="euR-KI-ygl"/>
                                     <constraint firstItem="KKK-gH-e2D" firstAttribute="leading" secondItem="k0d-Fq-9Qi" secondAttribute="leading" constant="15" id="fUb-Ag-5zn"/>
                                     <constraint firstAttribute="trailing" secondItem="HA2-Rx-G4X" secondAttribute="trailing" constant="15" id="hDL-2y-jwI"/>
                                     <constraint firstItem="fVl-ah-yAb" firstAttribute="centerY" secondItem="KKK-gH-e2D" secondAttribute="centerY" id="hWd-0k-rM3"/>
                                     <constraint firstItem="jGn-G7-yPi" firstAttribute="top" secondItem="KKK-gH-e2D" secondAttribute="bottom" constant="15" id="lD9-hF-tci"/>
+                                    <constraint firstAttribute="trailing" secondItem="vZM-TA-Sl4" secondAttribute="trailing" constant="20" id="mnW-9w-HAx"/>
                                     <constraint firstItem="HA2-Rx-G4X" firstAttribute="leading" secondItem="k0d-Fq-9Qi" secondAttribute="leading" constant="15" id="yc4-pU-eiC"/>
                                 </constraints>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_plus" translatesAutoresizingMaskIntoConstraints="NO" id="d3q-da-mcP">
-                                <rect key="frame" x="280" y="314.5" width="40" height="40"/>
+                                <rect key="frame" x="285" y="320" width="30" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="32g-yl-dmO"/>
-                                    <constraint firstAttribute="height" constant="40" id="ygS-YO-dWQ"/>
+                                    <constraint firstAttribute="width" constant="30" id="32g-yl-dmO"/>
+                                    <constraint firstAttribute="height" constant="30" id="ygS-YO-dWQ"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -311,8 +324,22 @@
                             <constraint firstItem="bpz-ae-3DD" firstAttribute="top" secondItem="k0d-Fq-9Qi" secondAttribute="bottom" constant="10" id="hVh-Yn-Pd1"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="RE3-eJ-5Zp">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="Jbv-KO-31K">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="y8c-Hw-HRK">
+                                <rect key="frame" x="447" y="7" width="133" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="完了"/>
+                                <connections>
+                                    <action selector="doneButtonPushed:" destination="gSy-mc-Sna" eventType="touchUpInside" id="LnT-qz-8m7"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="chooseBox" destination="HA2-Rx-G4X" id="nha-xM-PaV"/>
+                        <outlet property="deleteButton" destination="vZM-TA-Sl4" id="YFR-dL-Rsg"/>
+                        <outlet property="doneButton" destination="y8c-Hw-HRK" id="RYt-ru-0fE"/>
                         <outlet property="photoFlag" destination="fVl-ah-yAb" id="Bv1-z6-e4U"/>
                         <outlet property="selectImage" destination="jGn-G7-yPi" id="13x-XU-MqN"/>
                         <outlet property="videoImage" destination="7rr-NM-PE6" id="WoE-1f-QDk"/>
@@ -501,6 +528,7 @@
         <image name="btn_record" width="141" height="138"/>
         <image name="ic_album" width="105" height="105"/>
         <image name="ic_close" width="58" height="58"/>
+        <image name="ic_delete" width="21" height="30"/>
         <image name="ic_done" width="23" height="23"/>
         <image name="ic_plus" width="50" height="50"/>
         <image name="ic_video" width="105" height="105"/>
