--- a/TVar/Base.lproj/Main.storyboard
+++ b/TVar/Base.lproj/Main.storyboard
@@ -375,12 +375,12 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4By-ym-uqZ" userLabel="container">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LTo-Ta-CSF">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="detailBack" translatesAutoresizingMaskIntoConstraints="NO" id="LTo-Ta-CSF">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                     </imageView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PMS-Rc-SVv" userLabel="CommentTable">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <view key="tableFooterView" contentMode="scaleToFill" id="kj6-al-j8C" userLabel="Header">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="320"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -423,19 +423,25 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OcV-Zw-Mds">
                                                             <rect key="frame" x="65" y="36" width="525" height="25"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
-                                                            <color key="textColor" red="0.30980392159999998" green="0.34901960780000002" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserName" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5k4-76-pWN">
                                                             <rect key="frame" x="65" y="10" width="73" height="21"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
-                                                            <color key="textColor" red="0.59215686270000001" green="0.63137254899999995" blue="0.65098039220000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1時間前" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKB-XA-Upg">
-                                                            <rect key="frame" x="532" y="10" width="58" height="22"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Views" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKB-XA-Upg">
+                                                            <rect key="frame" x="548" y="10" width="42" height="22"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
-                                                            <color key="textColor" red="0.59215686270000001" green="0.63137254899999995" blue="0.65098039220000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k8C-yW-FXM">
+                                                            <rect key="frame" x="533" y="10" width="10" height="22"/>
+                                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -444,6 +450,8 @@
                                                         <constraint firstItem="OcV-Zw-Mds" firstAttribute="leading" secondItem="5k4-76-pWN" secondAttribute="leading" id="9Z2-kC-BOk"/>
                                                         <constraint firstItem="5k4-76-pWN" firstAttribute="leading" secondItem="IyY-AO-XbF" secondAttribute="trailing" constant="10" id="Kr2-w1-6Xd"/>
                                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="IyY-AO-XbF" secondAttribute="bottom" constant="10" id="LjB-Rg-wlr"/>
+                                                        <constraint firstItem="yKB-XA-Upg" firstAttribute="leading" secondItem="k8C-yW-FXM" secondAttribute="trailing" constant="5" id="Lrn-6y-jei"/>
+                                                        <constraint firstItem="yKB-XA-Upg" firstAttribute="centerY" secondItem="k8C-yW-FXM" secondAttribute="centerY" id="WXb-t1-MT2"/>
                                                         <constraint firstItem="OcV-Zw-Mds" firstAttribute="top" secondItem="5k4-76-pWN" secondAttribute="bottom" constant="5" id="Wm8-nG-91E"/>
                                                         <constraint firstItem="IyY-AO-XbF" firstAttribute="leading" secondItem="5c9-Gs-ADe" secondAttribute="leading" constant="10" id="bel-Jf-OGs"/>
                                                         <constraint firstAttribute="height" constant="80" id="c65-t6-gK7"/>
@@ -454,7 +462,6 @@
                                                     </constraints>
                                                 </view>
                                             </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="5c9-Gs-ADe" secondAttribute="trailing" id="3Kl-fC-K2B"/>
                                                 <constraint firstItem="dfK-4F-pGU" firstAttribute="leading" secondItem="kj6-al-j8C" secondAttribute="leading" id="59G-90-SwA"/>
@@ -467,7 +474,6 @@
                                         </view>
                                     </tableView>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstItem="PMS-Rc-SVv" firstAttribute="top" secondItem="4By-ym-uqZ" secondAttribute="top" id="3as-WN-q9X"/>
@@ -497,6 +503,7 @@
                         <outlet property="userImage" destination="IyY-AO-XbF" id="ijm-p0-uJ0"/>
                         <outlet property="userName" destination="5k4-76-pWN" id="LXU-C5-x5w"/>
                         <outlet property="videoView" destination="dfK-4F-pGU" id="XH8-vN-zxW"/>
+                        <outlet property="viewCount" destination="k8C-yW-FXM" id="Amj-VQ-aJI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vky-Qv-skQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -544,6 +551,7 @@
         <image name="btn_home" width="124" height="121"/>
         <image name="btn_play" width="121" height="121"/>
         <image name="btn_record" width="141" height="138"/>
+        <image name="detailBack" width="750" height="1334"/>
         <image name="ic_album" width="105" height="105"/>
         <image name="ic_close" width="58" height="58"/>
         <image name="ic_delete" width="21" height="30"/>
