--- a/TVar/Base.lproj/Main.storyboard
+++ b/TVar/Base.lproj/Main.storyboard
@@ -495,6 +495,13 @@
                             <constraint firstItem="4By-ym-uqZ" firstAttribute="leading" secondItem="CxD-Dq-GSX" secondAttribute="leading" id="yI5-jb-lhC"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="hK4-89-qIl">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="action" id="KYk-lk-XQn">
+                            <connections>
+                                <action selector="shareButtonClick:" destination="m5B-XG-BBO" id="fgb-Yb-dip"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="captureImage" destination="mak-HX-9Pu" id="T6j-yc-4HD"/>
                         <outlet property="commentTable" destination="PMS-Rc-SVv" id="fJV-dv-g2C"/>
